--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,6 +103,7 @@
             android:id="@+id/imageView3"
             android:layout_width="128dp"
             android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             app:srcCompat="@drawable/logo" />
     </LinearLayout>
