--- a/app/src/main/res/layout/profile_writer.xml
+++ b/app/src/main/res/layout/profile_writer.xml
@@ -6,7 +6,7 @@
     android:id="@+id/profile_writer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".writer.profileActivity_writer">
+    tools:context=".writer.ProfileActivityWriter">
 
     <!-- Background ImageView -->
 
