--- a/app/src/main/res/layout/activity_add_exam.xml
+++ b/app/src/main/res/layout/activity_add_exam.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/enter_exam_details"
@@ -52,7 +52,7 @@
             android:layout_marginBottom="24dp" />
 
         <EditText
-            android:id="@+id/editTextText4"
+            android:id="@+id/exam_subject"
             android:layout_width="300dp"
             android:layout_height="56dp"
             android:layout_marginBottom="16dp"
@@ -64,7 +64,7 @@
 
         <!-- Exam Date EditText -->
         <EditText
-            android:id="@+id/editTextDate"
+            android:id="@+id/exam_date"
             android:layout_width="300dp"
             android:layout_height="56dp"
             android:layout_marginBottom="16dp"
@@ -76,7 +76,7 @@
 
         <!-- Exam Time EditText -->
         <EditText
-            android:id="@+id/editTextTime"
+            android:id="@+id/exam_time"
             android:layout_width="300dp"
             android:layout_height="56dp"
             android:layout_marginBottom="24dp"
