--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,242 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#00FFFFFF"
     tools:context=".admin.AdminActivity">
 
 
     <ImageView
-        android:id="@+id/imageView13"
+        android:id="@+id/BackgroundImage"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/background_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/imagemain" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="63dp"
+        android:layout_height="61dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/language_btn"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/languages" />
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:text="Hello XYZ"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="30dp"
-            android:layout_weight="0"
-            android:baselineAlignBottom="false"
-            android:contentDescription=""
-            app:srcCompat="@drawable/languages" />
-
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="70dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/lumina_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="280dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_marginTop="305dp"
+        android:layout_marginEnd="4dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BackgroundImage">
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="82dp"
-            android:layout_height="82dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            app:srcCompat="@drawable/notificationbell" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="87dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-
-            android:padding="12dp"
-            app:srcCompat="@drawable/exam" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="85dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            app:srcCompat="@drawable/delegate" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="450dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:layout_marginEnd="20dp"
-            app:srcCompat="@drawable/query" />
-
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            app:srcCompat="@drawable/mwriter" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            app:srcCompat="@drawable/help" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="380dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="38dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#957DC3"
-            android:text="Notification"
-            android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#AE91E4"
-            android:text="Exam"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginBottom="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#AE91E4"
-            android:padding="0dp"
-            android:text="Allotment Schedule"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="550dp"
-        android:orientation="horizontal">
-
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#AE91E4"
-            android:text="Queries"
-            android:textColor="@color/black" />
-
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="0dp"
-            android:layout_height="52dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#AE91E4"
-            android:text="Manage Writers"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_weight="1"
-            android:backgroundTint="#AE91E4"
-            android:text="Help"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="4dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-
-        <include
-            layout="@layout/layout_bottom_bar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true" />
+            android:layout_height="84dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/icon_notification"
+                android:layout_width="135dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/notification_image"
+                android:scaleX="@dimen/IconScales"
+                android:scaleY="@dimen/IconScales"
+                app:srcCompat="@drawable/notificationbell" />
+
+            <ImageView
+                android:id="@+id/icon_exams"
+                android:layout_width="132dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/exam_image"
+                android:paddingLeft="20dp"
+                app:srcCompat="@drawable/exam" />
+
+            <ImageView
+                android:id="@+id/icon_allotments"
+                android:layout_width="143dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/allotment_image"
+                android:scaleX="0.80"
+                android:scaleY="0.80"
+                app:srcCompat="@drawable/delegate" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="23dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:paddingTop="12dp">
+
+            <Button
+                android:id="@+id/btn_notification"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/notification_btn"
+                android:text="@string/notification" />
+
+            <Button
+                android:id="@+id/btn_exams"
+                android:layout_width="122dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/exam_btn"
+                android:text="@string/exam" />
+
+            <Button
+                android:id="@+id/btn_allotments"
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/allotment_btn"
+                android:text="@string/allotment_schedule" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/icon_queries"
+                android:layout_width="143dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/queries_image"
+                android:scaleX="@dimen/IconScales"
+                android:scaleY="@dimen/IconScales"
+                app:srcCompat="@drawable/query" />
+
+            <ImageView
+                android:id="@+id/icon_mwriters"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/mwriters_image"
+                android:scaleX="@dimen/IconScales"
+                android:scaleY="@dimen/IconScales"
+                app:srcCompat="@drawable/mwriter" />
+
+            <ImageView
+                android:id="@+id/icon_help"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/help_image"
+                android:scaleX="@dimen/IconScales"
+                android:scaleY="@dimen/IconScales"
+                app:srcCompat="@drawable/help" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_queries"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/queries_btn"
+                android:text="@string/queries" />
+
+            <Button
+                android:id="@+id/btn_mwriters"
+                android:layout_width="123dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/mwriters_btn"
+                android:text="@string/manage_writers" />
+
+            <Button
+                android:id="@+id/btn_help"
+                android:layout_width="117dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/help_btn"
+                android:text="@string/help" />
+        </LinearLayout>
+
+        <include layout="@layout/layout_bottom_bar" />
+
+
     </LinearLayout>
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
