--- a/app/src/main/res/layout/profile_admin.xml
+++ b/app/src/main/res/layout/profile_admin.xml
@@ -6,7 +6,7 @@
     android:id="@+id/profile_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.profileActivity_admin">
+    tools:context=".admin.ProfileActivityAdmin">
 
     <!-- Background ImageView -->
 
