--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -44,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="305dp"
+        android:weightSum="4"
         android:layout_marginEnd="4dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,13 +54,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="84dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:weightSum="3"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/icon_notification"
-                android:layout_width="135dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/notification_image"
@@ -69,7 +72,8 @@
 
             <ImageView
                 android:id="@+id/icon_exams"
-                android:layout_width="132dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/exam_image"
@@ -78,7 +82,8 @@
 
             <ImageView
                 android:id="@+id/icon_allotments"
-                android:layout_width="143dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/allotment_image"
@@ -89,52 +94,55 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="23dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:weightSum="150"
             android:orientation="horizontal"
-            android:paddingTop="12dp">
+            android:paddingTop="22dp">
 
             <Button
                 android:id="@+id/btn_notification"
-                android:layout_width="138dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
+                android:layout_weight="53"
                 android:contentDescription="@string/notification_btn"
                 android:text="@string/notification" />
 
             <Button
                 android:id="@+id/btn_exams"
-                android:layout_width="122dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
+                android:layout_weight="45"
                 android:contentDescription="@string/exam_btn"
                 android:text="@string/exam" />
 
             <Button
                 android:id="@+id/btn_allotments"
-                android:layout_width="135dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
+                android:layout_weight="52"
                 android:contentDescription="@string/allotment_btn"
                 android:text="@string/allotment_schedule" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:weightSum="3"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/icon_queries"
-                android:layout_width="143dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/queries_image"
                 android:scaleX="@dimen/IconScales"
@@ -143,7 +151,8 @@
 
             <ImageView
                 android:id="@+id/icon_mwriters"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/mwriters_image"
                 android:scaleX="@dimen/IconScales"
@@ -152,8 +161,9 @@
 
             <ImageView
                 android:id="@+id/icon_help"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/help_image"
                 android:scaleX="@dimen/IconScales"
                 android:scaleY="@dimen/IconScales"
@@ -162,13 +172,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="33dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingTop="22dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_queries"
-                android:layout_width="125dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="7dp"
@@ -179,7 +190,7 @@
 
             <Button
                 android:id="@+id/btn_mwriters"
-                android:layout_width="123dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/mwriters_btn"
@@ -187,7 +198,7 @@
 
             <Button
                 android:id="@+id/btn_help"
-                android:layout_width="117dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="7dp"
