--- a/app/src/main/res/layout/activity_add_exam.xml
+++ b/app/src/main/res/layout/activity_add_exam.xml
@@ -59,7 +59,7 @@
             android:hint="@string/enter_exam_subject"
             android:importantForAutofill="no"
             android:inputType="text"
-            android:textColorHint="#000000" />
+            android:textColorHint="@android:color/primary_text_light" />
 
         <!-- Exam Date EditText -->
         <EditText
@@ -71,7 +71,7 @@
             android:hint="@string/enter_exam_date"
             android:importantForAutofill="no"
             android:inputType="date"
-            android:textColorHint="#000000" />
+            android:textColorHint="@android:color/primary_text_light" />
 
         <!-- Exam Time EditText -->
         <EditText
@@ -83,7 +83,7 @@
             android:hint="@string/enter_exam_time"
             android:importantForAutofill="no"
             android:inputType="time"
-            android:textColorHint="#000000" />
+            android:textColorHint="@android:color/primary_text_light" />
 
         <!-- Submit Button -->
         <Button
