--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/background"
+        android:adjustViewBounds="true"/>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="157dp"
+        android:layout_marginEnd="177dp"
+        android:adjustViewBounds="true"
+        android:scaleX="4"
+        android:scaleY="4"
+        app:srcCompat="@drawable/logo" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="400dp"
@@ -39,73 +63,47 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/radioButton4"
-                android:layout_width="wrap_content"
+            <RadioGroup
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="12dp"
-                android:text="Admin" />
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioButton4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="12dp"
+                    android:text="Admin" />
 
-            <RadioButton
-                android:id="@+id/radioButton5"
-                android:layout_width="115dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_weight="1"
-                android:text="Writer" />
+                <RadioButton
+                    android:id="@+id/radioButton5"
+                    android:layout_width="115dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="1"
+                    android:text="Writer" />
 
-            <RadioButton
-                android:id="@+id/radioButton6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Visually Impaired" />
+                <RadioButton
+                    android:id="@+id/radioButton6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Visually Impaired" />
+            </RadioGroup>
         </LinearLayout>
 
         <Button
             android:id="@+id/button"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="submit" />
 
-        <!--<Button
+        <Button
             android:id="@+id/registerButton"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:text="register"
-            android:visibility="gone" /> --><!-- Initially hidden -->
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/background" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginLeft="155dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/logo" />
+            android:text="register" />
     </LinearLayout>
 
 </RelativeLayout>
